[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Piece/Piece.gd" type="Script" id=1]
[ext_resource path="res://Resources/Custom/pieces.png" type="Texture" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="Root" type="Node2D"]
script = ExtResource( 1 )

[node name="piece" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 80, 0, 16, 16 )

[node name="MoveCounter" type="Node2D" parent="."]

[node name="MainMove" type="Sprite" parent="MoveCounter"]
position = Vector2( 4, -32 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 16, 16, 16, 16 )

[node name="Sprite" type="Sprite" parent="MoveCounter"]
visible = false
position = Vector2( 0, -8 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 16, 16, 16, 16 )

[node name="Button" type="Button" parent="."]
margin_left = 6.0
margin_top = 2.0
margin_right = 26.0
margin_bottom = 30.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
